--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,10 @@
         <input type="submit" id="submit" value="submit">
       </div>
     </form>
+
+  </div>
+  <div class="bucketList">
+
   </div>
 </div>
 </body>
