--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,7 @@
   <title>Bucket List</title>
   <script src="/js/bundle.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Cinzel|EB+Garamond" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Black+And+White+Picture" rel="stylesheet">
   <link rel="stylesheet" href="/css/main.css">
 </head>
 
